syntax = "proto3";// Make sure to have proto3 for your proto files.
// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "smart.building.healthCheckService";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "HealthCheckServiceImpl";

package smart;

 service HealthCheckService {
	//Server Streaming
	rpc buildingAirConditionCheck (BuildingAirRequest) returns (stream BuildingAirReply) {}


	//Server Streaming
	rpc harmfulAirAlarm (AirAlarmRequest) returns (stream AirAlarmReply) {}

 }
// define each variable in rpc method separately
message AirAlarmRequest{
	string item = 1;
}
message AirAlarmReply{
	string message = 1;
}

message BuildingAirRequest{
	string item = 1;
}
message BuildingAirReply{
	string message = 1;
}